# fastapi-uow-001

./: .env_local  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile-db-local  Makefile  README.md  docker-compose-local.yml  docker_postgres_init.sql  mypy.ini  pyproject.toml  pytest.ini
src/: config.py  main.py
src/core/: middlewares.py  schemas.py  utils.py
src/models/: alembic.ini
src/models/migrations/: env.py
src/models/migrations/versions/: 2024_03_31_1122-95d7d0b18282_add_users.py
src/models/src/: __init__.py  dals.py  database.py
src/models/src/modules/: users.py
src/users/: actions.py  dals.py  router.py  schemas.py
